--- a/.github/workflows/GithubDeployProcess.yml
+++ b/.github/workflows/GithubDeployProcess.yml
@@ -7,7 +7,7 @@ jobs:
     CI:
         runs-on: ubuntu-latest
         container: 
-            image: salesforce/salesforcedx
+            image: salesforce/cli:2.79.0-full
         steps:
             - uses: actions/checkout@v2
             - name: VALIDATE PACKAGE
