--- a/.github/workflows/GithubDeployProcess.yml
+++ b/.github/workflows/GithubDeployProcess.yml
@@ -12,7 +12,7 @@ jobs:
             - uses: actions/checkout@v2
             - name: VALIDATE PACKAGE
               run: | 
-                echo force://${{secrets.CLI_APP}}::${{secrets.USER_TOKEN}}@${{secrets.SF_URL}} >> auth.txt
+                echo force://${{secrets.CLI_APP}}::${{secrets.USER_TOKEN}}@${{secrets.SF_URL}} >> config/auth.txt
                 sfdx force:auth:sfdxurl:store -f config/auth.txt -s -a MyOrg
                 sfdx force:org:create -f config/project-scratch-def.json -a CIOrg -s -v MyOrg
                 sfdx force:source:push -u CIOrg
