--- a/.github/workflows/GithubDeployProcess.yml
+++ b/.github/workflows/GithubDeployProcess.yml
@@ -1,7 +1,7 @@
 name: GitHubDeployProcess
 on: 
     push: 
-        branches: [master, develop]
+        branches: [master]
 
 jobs:
     CI:
@@ -22,7 +22,6 @@ jobs:
     
     CD:
         needs: [CI]
-        if: github.ref != 'refs/heads/develop'
         runs-on: ubuntu-latest
         container: 
             image: salesforce/cli:2.79.0-full
